--- a/sass/_jobs.scss
+++ b/sass/_jobs.scss
@@ -190,32 +190,32 @@
 *********************/
 
 .jobs-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6); /* Overlay sombre */
     @include mixins.flexbox(row, center, center);
-    visibility: hidden;
-    opacity: 0;
-    z-index: 1000;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+    // visibility: hidden;
+    // opacity: 0;
+    // z-index: 1000;
+    // transition: opacity 0.3s ease, visibility 0.3s ease;
 
-    &--hidden {
-        visibility: hidden;
-        opacity: 0;
-    }
+    // &--hidden {
+    //     visibility: hidden;
+    //     opacity: 0;
+    // }
 
-    &__overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.6); /* Overlay transparent */
-        z-index: -1;
-    }
+    // &__overlay {
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-color: rgba(0, 0, 0, 0.6); /* Overlay transparent */
+    //     z-index: -1;
+    // }
 
     &__content {
         background-color: #fff;
@@ -224,14 +224,14 @@
         border-radius: 10px;
         padding: 2rem;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
-        transform: translateY(-50px); /* Animation d’apparition */
-        opacity: 0;
-        transition: transform 0.3s ease, opacity 0.3s ease;
+        // transform: translateY(-50px); /* Animation d’apparition */
+        // opacity: 0;
+        // transition: transform 0.3s ease, opacity 0.3s ease;
 
-        &.show {
-            transform: translateY(0);
-            opacity: 1;
-        }
+        // &.show {
+        //     transform: translateY(0);
+        //     opacity: 1;
+        // }
     }
 
     &__close {
