--- a/sass/_legal.scss
+++ b/sass/_legal.scss
@@ -39,19 +39,21 @@
         background-color: #fff;
         width: 90%;
         max-width: 600px;
+        height: 800px;
         border-radius: 8px;
         padding: 2rem;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
         transform: translateY(-50px); /* Animation d'apparition */
         opacity: 0;
         transition: transform 0.3s ease, opacity 0.3s ease;
-
+        
+        
         &.show {
             transform: translateY(0);
             opacity: 1;
         }
     }
-
+    
     &__close {
         background: none;
         border: none;
@@ -62,16 +64,19 @@
         right: 16px;
         cursor: pointer;
         transition: color 0.3s ease;
-
+        
         &:hover {
             color: #f00;
         }
     }
-
+    
     &__body {
+        height: 100%;
         color: #333;
         font-family: "Arial", sans-serif;
         line-height: 1.6;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
 
     &__title {
