--- a/sass/_profiles.scss
+++ b/sass/_profiles.scss
@@ -299,12 +299,13 @@
     }
 
     &__content {
-        background-color: #fff;
-        width: 90%;
+        // background-color: #fff;
+        // height: 600px;
+        width: 100%;
         max-width: 800px;
         border-radius: 10px;
         padding: 2rem;
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+        // box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
         transform: translateY(-50px);
         opacity: 0;
         transition: transform 0.3s ease, opacity 0.3s ease;
@@ -319,9 +320,9 @@
         background: none;
         border: none;
         font-size: 1.5rem;
-        color: #333;
+        color: #fff;
         position: absolute;
-        top: 16px;
+        top: 5%;
         right: 16px;
         cursor: pointer;
         transition: color 0.3s ease;
@@ -329,6 +330,13 @@
         &:hover {
             color: #f00;
         }
+    }
+
+    &__carousel {
+        width: 90%;
+        height: 100%;
+        position: relative;
+        margin: 0 auto;
     }
 
     &__body {
@@ -389,217 +397,353 @@
             color: #666;
         }
     }
-}
 
-/***************************
-***                      ***
-***   Carousel Profile   ***
-***                      ***
-****************************/
-.profiles-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    opacity: 0;
-    z-index: 1000;
-    backdrop-filter: blur(10px);
-    background: rgba(255, 255, 255, 0.15);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+    &__card {
+        background-color: #fff;
+        padding: 1.5rem;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        margin: 1rem;
+        text-align: center;
 
-    &--hidden {
-        visibility: hidden;
-        opacity: 0;
+        &__title {
+            font-size: 1.8rem;
+            color: variables.$primary-color;
+            margin-bottom: 1rem;
+        }
+
+        &__speciality {
+            font-size: 1.2rem;
+            color: #666;
+            margin-bottom: 1rem;
+        }
+
+        &__technologies {
+            list-style: none;
+            padding: 0;
+            margin: 0 0 1rem 0;
+
+            &__tech {
+                background-color: variables.$secondary-color;
+                color: #fff;
+                padding: 0.5rem 1rem;
+                border-radius: 4px;
+                margin: 0.5rem 0;
+                display: inline-block;
+            }
+        }
     }
 
-    &--active {
-        visibility: visible;
-        opacity: 1;
-    }
-
-    &__overlay {
+        &__control {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
-        z-index: -1;
+        top: 50%;
+        height: 80px;
+        width: 80px;
+        border-radius: 50%;
+        font-size: 3rem;
+        color: variables.$background-color;
+        transform: translateY(-50%); // Centrage vertical
+        transition: all 0.3s ease;
+        z-index: 2;
+
+        &--prev {
+            left: -40px; // Place le bouton à gauche en dehors du carousel
+            background-color: variables.$success-color;
+        }
+
+        &--next {
+            right: -40px; // Place le bouton à droite en dehors du carousel
+            background-color: variables.$warning-color;
+        }
+
+        &:hover {
+            height: 96px;
+            width: 96px;
+            background-color: lighten(variables.$primary-color, 10%);
+            color: variables.$success-color;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        i {
+            line-height: 80px; // Centrage vertical de l'icône
+        }
     }
 
-    &__content {
-        background: rgba(255, 255, 255, 0.8);
-        border-radius: 15px;
-        max-width: 800px;
-        width: 90%;
-        height: 50%;
-        position: relative;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 2rem;
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    &__actions {
+        @include mixins.flexbox(row, center, center, 1rem);
 
-        &__close {
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-            background: none;
+        & .profile-modal__contact-button {
+            background-color: variables.$primary-color;
+            color: variables.$background-color;
             border: none;
-            font-size: 1.5rem;
-            color: #333;
+            border-radius: 5px;
+            padding: 0.5rem 1rem;
             cursor: pointer;
-            transition: color 0.3s ease;
+            transition: background-color 0.3s ease;
 
             &:hover {
-                color: #f00;
+                background-color: lighten(variables.$primary-color, 10%);
             }
         }
     }
 
-    .profiles-carousel {
-        height: 60%;
-        width: 90%;
-        position: absolute;
-        bottom: 10%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    .slick-track {
+        display: flex !important;
+        height: 100%;
+    }
 
-        .profiles-control {
-            position: absolute;
-            height: 80px;
-            width: 80px;
-            border-radius: 50%;
-            font-size: 2rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            cursor: pointer;
-            z-index: 10;
+    .slick-list {
+        height: 100%;
+    }
 
-            &--prev {
-                background-color: rgba(0, 123, 255, 0.8);
-                left: -50px;
+    .slick-slide {
+        transition: transform 0.3s ease, opacity 0.3s ease;
+        transform: scale(0.9);
+    }
 
-                &:hover {
-                    background-color: rgba(0, 123, 255, 1);
-                }
-            }
+    // Effets appliqués uniquement si plus de 3 éléments
+    .carousel--large .slick-slide:not(.slick-current) {
+        transform: scale(0.9);
+        opacity: 0.7;
+    }
 
-            &--next {
-                background-color: rgba(255, 193, 7, 0.8);
-                right: -50px;
+    .carousel--large .slick-current {
+        transform: scale(1);
+        opacity: 1;
+        z-index: 2;
+    }
 
-                &:hover {
-                    background-color: rgba(255, 193, 7, 1);
-                }
+    // Effets appliqués uniquement 2 éléments ou moins
+    .carousel {
+        &--solo {
+            .slick-slide {
+                width: 40% !important; // Ajuste la taille de l'élément
+                margin: auto; // Centre l'élément
+                justify-self: center;
+                align-self: center;
             }
         }
 
-        .profiles-container {
-            width: 100%;
-            display: flex;
-            overflow: hidden;
-
-            .profiles-item {
-                flex: 0 0 100%;
-                height: 100%;
-                padding: 2rem;
-                background-color: rgba(255, 255, 255, 0.9);
-                border-radius: 10px;
-                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-                transition: transform 0.3s ease-in-out;
-
-                &:hover {
-                    transform: scale(1.05);
-                }
-
-                .profiles-title {
-                    font-size: 1.8rem;
-                    margin-bottom: 1rem;
-                    text-align: center;
-                }
-
-                .profiles-infos {
-                    display: flex;
-                    justify-content: space-between;
-                    margin-bottom: 1rem;
-
-                    div {
-                        display: flex;
-                        align-items: center;
-
-                        i {
-                            margin-right: 0.5rem;
-                            color: #555;
-                        }
-
-                        p {
-                            margin: 0;
-                            font-size: 1rem;
-                            color: #333;
-                        }
-                    }
-                }
-
-                .profiles-description {
-                    margin-bottom: 1rem;
-
-                    &--content {
-                        font-size: 1rem;
-                        line-height: 1.5;
-                        color: #555;
-                    }
-                }
-
-                .profiles-tag {
-                    display: flex;
-                    flex-wrap: wrap;
-                    gap: 0.5rem;
-                    margin-bottom: 1rem;
-
-                    i {
-                        margin-right: 0.5rem;
-                    }
-
-                    p {
-                        padding: 0.3rem 0.8rem;
-                        background-color: rgba(0, 123, 255, 0.2);
-                        border-radius: 5px;
-                        font-size: 0.9rem;
-                        color: #007bff;
-                    }
-                }
-
-                .profiles-cta {
-                    display: flex;
-                    justify-content: space-around;
-
-                    .profiles-button {
-                        background-color: rgba(40, 167, 69, 0.8);
-                        color: #fff;
-                        padding: 0.8rem 1.5rem;
-                        border: none;
-                        border-radius: 5px;
-                        font-size: 1rem;
-                        cursor: pointer;
-                        transition: background-color 0.3s ease;
-
-                        &:hover {
-                            background-color: rgba(40, 167, 69, 1);
-                        }
-                    }
-                }
+        &--duo {
+            .slick-slide {
+                width: 40% !important; // Ajuste la taille des deux éléments
+            }
+            .slick-track {
+                justify-content: center; // Aligne les deux éléments au centre
             }
         }
     }
 }
+
+// /***************************
+// ***                      ***
+// ***   Carousel Profile   ***
+// ***                      ***
+// ****************************/
+// .profiles-modal {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     visibility: hidden;
+//     opacity: 0;
+//     z-index: 1000;
+//     backdrop-filter: blur(10px);
+//     background: rgba(255, 255, 255, 0.15);
+//     -webkit-backdrop-filter: blur(10px);
+//     border: 1px solid rgba(255, 255, 255, 0.3);
+//     transition: opacity 0.3s ease, visibility 0.3s ease;
+
+//     &--hidden {
+//         visibility: hidden;
+//         opacity: 0;
+//     }
+
+//     &--active {
+//         visibility: visible;
+//         opacity: 1;
+//     }
+
+//     &__overlay {
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 100%;
+//         height: 100%;
+//         background-color: rgba(0, 0, 0, 0.6);
+//         z-index: -1;
+//     }
+
+//     &__content {
+//         background: rgba(255, 255, 255, 0.8);
+//         border-radius: 15px;
+//         max-width: 800px;
+//         width: 90%;
+//         height: 50%;
+//         position: relative;
+//         top: 50%;
+//         left: 50%;
+//         transform: translate(-50%, -50%);
+//         padding: 2rem;
+//         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+
+//         &__close {
+//             position: absolute;
+//             top: 1rem;
+//             right: 1rem;
+//             background: none;
+//             border: none;
+//             font-size: 1.5rem;
+//             color: #333;
+//             cursor: pointer;
+//             transition: color 0.3s ease;
+
+//             &:hover {
+//                 color: #f00;
+//             }
+//         }
+//     }
+
+//     .profiles-carousel {
+//         height: 60%;
+//         width: 90%;
+//         position: absolute;
+//         bottom: 10%;
+//         display: flex;
+//         align-items: center;
+//         justify-content: center;
+
+//         .profiles-control {
+//             position: absolute;
+//             height: 80px;
+//             width: 80px;
+//             border-radius: 50%;
+//             font-size: 2rem;
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             color: #fff;
+//             cursor: pointer;
+//             z-index: 10;
+
+//             &--prev {
+//                 background-color: rgba(0, 123, 255, 0.8);
+//                 left: -50px;
+
+//                 &:hover {
+//                     background-color: rgba(0, 123, 255, 1);
+//                 }
+//             }
+
+//             &--next {
+//                 background-color: rgba(255, 193, 7, 0.8);
+//                 right: -50px;
+
+//                 &:hover {
+//                     background-color: rgba(255, 193, 7, 1);
+//                 }
+//             }
+//         }
+
+//         .profiles-container {
+//             width: 100%;
+//             display: flex;
+//             overflow: hidden;
+
+//             .profiles-item {
+//                 flex: 0 0 100%;
+//                 height: 100%;
+//                 padding: 2rem;
+//                 background-color: rgba(255, 255, 255, 0.9);
+//                 border-radius: 10px;
+//                 box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+//                 transition: transform 0.3s ease-in-out;
+
+//                 &:hover {
+//                     transform: scale(1.05);
+//                 }
+
+//                 .profiles-title {
+//                     font-size: 1.8rem;
+//                     margin-bottom: 1rem;
+//                     text-align: center;
+//                 }
+
+//                 .profiles-infos {
+//                     display: flex;
+//                     justify-content: space-between;
+//                     margin-bottom: 1rem;
+
+//                     div {
+//                         display: flex;
+//                         align-items: center;
+
+//                         i {
+//                             margin-right: 0.5rem;
+//                             color: #555;
+//                         }
+
+//                         p {
+//                             margin: 0;
+//                             font-size: 1rem;
+//                             color: #333;
+//                         }
+//                     }
+//                 }
+
+//                 .profiles-description {
+//                     margin-bottom: 1rem;
+
+//                     &--content {
+//                         font-size: 1rem;
+//                         line-height: 1.5;
+//                         color: #555;
+//                     }
+//                 }
+
+//                 .profiles-tag {
+//                     display: flex;
+//                     flex-wrap: wrap;
+//                     gap: 0.5rem;
+//                     margin-bottom: 1rem;
+
+//                     i {
+//                         margin-right: 0.5rem;
+//                     }
+
+//                     p {
+//                         padding: 0.3rem 0.8rem;
+//                         background-color: rgba(0, 123, 255, 0.2);
+//                         border-radius: 5px;
+//                         font-size: 0.9rem;
+//                         color: #007bff;
+//                     }
+//                 }
+
+//                 .profiles-cta {
+//                     display: flex;
+//                     justify-content: space-around;
+
+//                     .profiles-button {
+//                         background-color: rgba(40, 167, 69, 0.8);
+//                         color: #fff;
+//                         padding: 0.8rem 1.5rem;
+//                         border: none;
+//                         border-radius: 5px;
+//                         font-size: 1rem;
+//                         cursor: pointer;
+//                         transition: background-color 0.3s ease;
+
+//                         &:hover {
+//                             background-color: rgba(40, 167, 69, 1);
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
